# fund-cert-sprints

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/agents/: developer.agent.md  plan.agent.md
.github/prompts/: plan-qna.prompt.md
.github/templates/: plan-template.md
config/: mapping.example.yaml
docs/: ARCHITECTURE.md  Arquitectura y diseño técnico.md  Detalles de plantilla Template_Mes para duplicación de periodos.md  Generate Sprint Certificates.md  Generate_Sprint_Certificates.md  Template_Mes-Details.md
scripts/: run_month.ps1  setup_env.ps1  validate-doc-updates.ps1
src/sprint_cert_automation/: __init__.py  app.py  cli.py
src/sprint_cert_automation/domain/: models.py  rules.py
src/sprint_cert_automation/infrastructure/: __init__.py  excel_com.py
src/sprint_cert_automation/services/: certificate_service.py  forecast_reader.py  macro_export_service.py  sheet_duplicator.py  sprint_configurator.py  template_writer.py  zip_service.py
src/sprint_cert_automation/utils/: dates.py  filenames.py
tests/: test_cli.py  test_filenames.py  test_forecast_reader.py  test_macro_export_service.py  test_rules.py  test_sheet_duplicator.py  test_sprint_configurator.py  test_template_writer.py
